[package]
name = "git-manager"
version = "0.1.0"
authors = ["wujiayu <2934610933@qq.com>"]
edition = "2021"

[[bin]]
name = "gumy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["fs", "rt", "rt-multi-thread", "macros", "io-util", "process"] }
